# dose_every_well

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-solid.py
demo/: README.md  arduino_demo.py  axis_movement_demo.py  axis_movement_demo_auto.py  check_ports.py  home_CNC.py  manual_reset.py  move_CNC.py  move_CNC1.py  numtest.py  plate_loader_demo.py  reset_cnc.py  serial_monitor.py  simple_connect_demo.py  solid_doser_demo.py  test_cnc_communication.py  z_axis_test.py
docs/: api_reference.md  installation.md  plate_loader.md  quick_start.md  servo_power_guide.md  solid_doser.md  troubleshooting.md  wiring_guide.md
gripper_controller/: grasping_control  grasping_control.py  positions.json  serial_monitor.py
src/dose_every_well/: __init__.py  cnc_controller.py  cnc_settings.yaml  plate_loader.py  plate_settings.yaml  sartorius_balance.py  solid_doser.py
src/liquid_cnc/: YH_cnc_controller.py  __init__.py  cnc_controller.py  cnc_controller_copy.py  cnc_driver.py  cnc_settings.yaml  weighting.py
