[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dose_every_well"
version = "0.5.0"
description='Python package that use CNC for liquid handling'
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Yang Cao", email = "yangcyril.cao@utoronto.ca"}
]
dependencies = [
    "pyserial==3.5",
    "matplotlib==3.10.0",
    "PyYAML==6.0.2"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

[project.optional-dependencies]
rpi = [
    "adafruit-circuitpython-pca9685",
    "adafruit-circuitpython-motor",
    "rpi-lgpio"
]

[tool.setuptools.package-dir]
dose_every_well = 'src/dose_every_well'